samples/_failures_safe/1761043790_676808_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_40181f41.c: In function ‘main’:
./samples/SAFE/__tmp_40181f41.c:151:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  151 |     int token
      |     ^~~
./samples/SAFE/__tmp_40181f41.c:151:5: error: expected declaration or statement at end of input
